--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   </ol>
 
   <h2><a href="https://en.wikipedia.org/wiki/Impressionism" target="_blank" title="impressionism wikipidia">19세기 인상주의~후기 인상주의 작가들</a></h2>
+  <p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/LHlNHYYHzPM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </p>
   <img src="yes.jpg" width="55%">
   <p>19세기 미술 중 <strong>인상주의~후기 인상주의 <u>작가</u></strong>들에 대하여 : 마네, 모네, 르누아르, 드가. 툴루즈 로트렉, 세잔, 고갱, 반고흐</p>
-  
+
   <p>인상주의는 르네상스 이후 최초의 총체적인 미술혁신으로 기록된다. 1860년 초 프랑스에서
   발생해 1886년을 기점으로 순수한 의미의 인상주의는 끝이 나지만, 이후 모든 미술의 방향을 결정하게 되는 중요한 미술사조이다.
   인상주의는 르네상스 시대의 산물인 원근법, 균형잡힌 구도, 이상화된 인물, 명암 대조법 등을 거부함으로써 미술 전통에 혁신을 가져왔다.
@@ -27,5 +30,27 @@
   인상주의 그림의 원색으로 된 점들은 가까이서 보면 무엇을 그렸는지 알아보기 힘들어 당시의 비평가들은 "권총으로 물감을 터뜨린 것과 같다" 고 비꼬았다.
   그러나 약간 거리를 두고 보면 푸른색과 노란색의 점들이 융합해 녹색으로 보이는 시각적 효과가 있는데, 그러한 색조는 팔레트에서 섞은 것보다 더욱 강렬한 느낌을 준다.
   심지어 그림자마저도 회색이나 검은색(인상주의자들은 이런 색조를 가장 싫어했다)이 아닌 다른 색조로 그려져 있다.</p>
+<p>
+  <div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+/*
+var disqus_config = function () {
+this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+*/
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://web1-df91nliyhl.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+</p>
 </body>
 </html>
